<resources>
    <string name="app_name">SR</string>
    <string name="don_t_have_account_create_new">"Don't have account? Create new "</string>
    <string name="sr">SR</string>
    <string name="log_in">LOG IN</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="enter_your_username">Enter your Email</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_roll_number">Enter your Roll number</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="regester">Regester</string>
    <string name="welcome_shivansh">Welcome, Shivansh</string>
    <string name="library">Library</string>
    <string name="accounts">Accounts</string>
    <string name="transport">Transport</string>
    <string name="directory">Directory</string>
    <string name="bus_fee">Bus Fee</string>
    <string name="_31000_00">31000.00</string>
    <string name="_51000_00">51000.00</string>
    <string name="_500_00">500.00</string>
    <string name="_5000_00">5000.00</string>
    <string name="_20000_00">20000.00</string>
    <string name="_7500_00">7500.00</string>
    <string name="internal_examination_fee">Internal Examination Fee</string>
    <string name="hostel_fee">Hostel Fee</string>
    <string name="_2000_00">2000.00</string>
    <string name="library_fee">Library Fee</string>
    <string name="_50000_00">50000.00</string>
    <string name="_78393_00">78393.00</string>
    <string name="_28393_00">28393.00</string>
    <string name="_0">0</string>
    <string name="nil">Nil</string>
    <string name="tuition_fee">Tuition Fee</string>
    <string name="university_fee">University Fee</string>
    <string name="registration_charge">Registration Charge</string>
    <string name="_5500_00">5500.00</string>
    <string name="account_book">Account Book</string>
    <string name="paid">Paid</string>
    <string name="remain">Remain</string>
    <string name="total">Total</string>
    <string name="fees">Fees</string>
    <string name="shivansh_khare">Shivansh Khare</string>
    <string name="course">Course :</string>
    <string name="name">Name :</string>
    <string name="bachelor_of_technology">Bachelor of Technology</string>
    <string name="_1904850100108">1904850100108</string>
    <string name="roll_number">Roll Number :</string>
    <string name="xxxxxx5893">XXXXXX5893</string>
    <string name="fee_structure">Fee Structure</string>
    <string name="account_number">Account Number :</string>
    <string name="current_status">Current status</string>
    <string name="you_can_request_a_book_if_it_is_not_available_in_library_and_it_will_be_purchased_if_remand_increases">you can request a book if it is not available in library and it will be purchased if remand increases.</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="request_a_book">Request a book.</string>
    <string name="check_your_current_issued_books_there_submition_date_and_shows_your_total_fine_till_date">check your current issued books, there submition date and shows your total fine till date.</string>
    <string name="read_frequentyly_asked_questions_and_there_answers_by_library_staff_ask_your_queries_doubts_and_share_suggestions">Read frequentyly asked Questions and there answers by Library Staff, ask your queries, doubts, and share suggestions.</string>
    <string name="search_for_current_books_in_library_for_every_field_of_interests_you_will_find_books">search for current books in library, for every field of interests you will find books</string>
    <string name="search_book">Search Book</string>
    <string name="enter_book_name">Enter Book name</string>
    <string name="enter_auther_name">Enter Auther Name</string>
    <string name="enter_edition">Enter Edition</string>
    <string name="reason_for_requesting">Reason for requesting</string>
    <string name="request">Request</string>
    <string name="enter_publication">Enter publication</string>
    <string name="i_mba">I MBA</string>
    <string name="b_tech">B.tech</string>
    <string name="mba">MBA</string>
    <string name="management">Management</string>
    <string name="ayush">Ayush</string>
    <string name="todo">TODO</string>
    <string name="first_year">First year</string>
    <string name="second_year">second year</string>
    <string name="third_year">third year</string>
    <string name="fourth_year">fourth year</string>
    <string name="bio_technology_bt">bio-technology (BT)</string>
    <string name="civil_engineering_ce">civil engineering (CE)</string>
    <string name="computer_science_engineering_cs"><![CDATA[computer science & engineering (cs)]]></string>
    <string name="information_technology_it">information technology (it)</string>
    <string name="agriculture_engineering_ag">agriculture engineering (ag)</string>
    <string name="electronics_communication_ec"><![CDATA[electronics & communication (ec)]]></string>
    <string name="mechanical_engineering_me">mechanical engineering (me)</string>
    <string name="elecrtical_electronics_engineering_en"><![CDATA[elecrtical & electronics engineering (en)]]></string>
    <string name="neeta_rastogi_hod">neeta rastogi (hod)</string>
    <string name="ram_kishan_dubey">ram kishan dubey</string>
    <string name="rahul_gupta">rahul gupta</string>
    <string name="suchita_rani">suchita rani</string>
    <string name="nidhi_singh">nidhi singh</string>
    <string name="faizaan_mahmood">Faizan Mahmood</string>
    <string name="akash_raghuvanshi">akash raghuvanshi</string>
    <string name="dushyant_shrivastav">dushyant shrivastav</string>
    <string name="title_activity_bus_activity">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>